add images (part 2)

--- a/index.html
+++ b/index.html
@@ -107,65 +107,84 @@
       <section class="section popular-categories">
         <div class="container">
           <h2 class="section-title">Популярні категорії</h2>
-          <ul class="list">
-            <li>
+          <ul class="list list-categories">
+            <li class="item-categories">
               <a href="">
-                <img src="./images/beds..png" alt="" />
+                <img src="./images/popular-categoris/beds.png" alt="ліжка" />
                 <h3 class="description title-descr">Ліжка</h3>
                 <p class="description amount">54</p></a
               >
             </li>
-            <li>
-              <a href=""
-                ><h3 class="description title-descr">Матраци</h3>
+            <li class="item-categories">
+              <a href="">
+                <img
+                  src="./images/popular-categoris/matresses.png"
+                  alt="матраци"
+                />
+                <h3 class="description title-descr">Матраци</h3>
                 <p class="description amount">30</p></a
               >
             </li>
-            <li>
-              <a href=""
-                ><h3 class="description title-descr">М'які меблі</h3>
+            <li class="item-categories">
+              <a href="">
+                <img
+                  src="./images/popular-categoris/soft-furniture.png"
+                  alt="м'які меблі"
+                />
+                <h3 class="description title-descr">М'які меблі</h3>
                 <p class="description amount">196</p></a
               >
             </li>
-            <li>
-              <a href=""
-                ><h3 class="description title-descr">Шафи</h3>
+            <li class="item-categories">
+              <a href="">
+                <img src="./images/popular-categoris/wardrodes.png" alt="" />
+                <h3 class="description title-descr">Шафи</h3>
                 <p class="description amount">79</p></a
               >
             </li>
-            <li>
-              <a href=""
-                ><h3 class="description title-descr">Комоди</h3>
+            <li class="item-categories">
+              <a href="">
+                <img src="./images/popular-categoris/comodes.png" alt="" />
+                <h3 class="description title-descr">Комоди</h3>
                 <p class="description amount">54</p></a
               >
             </li>
-            <li>
-              <a href=""
-                ><h3 class="description title-descr">Тумби</h3>
+            <li class="item-categories">
+              <a href="">
+                <img src="./images/popular-categoris/thumbs.png" alt="" />
+                <h3 class="description title-descr">Тумби</h3>
                 <p class="description amount">64</p></a
               >
             </li>
-            <li>
-              <a href=""
-                ><h3 class="description title-descr">Столи</h3>
+            <li class="item-categories">
+              <a href="">
+                <img src="./images/popular-categoris/tables.png" alt="" />
+                <h3 class="description title-descr">Столи</h3>
                 <p class="description amount">35</p></a
               >
             </li>
-            <li>
-              <a href=""
-                ><h3 class="description title-descr">Стільці</h3>
+            <li class="item-categories">
+              <a href="">
+                <img src="./images/popular-categoris/chairs.png" alt="" />
+                <h3 class="description title-descr">Стільці</h3>
                 <p class="description amount">89</p></a
               >
             </li>
-            <li>
-              <a href=""
-                ><h3 class="description title-descr">Меблеві стіни</h3>
+            <li class="item-categories">
+              <a href=""></a>
+                <img
+                  src="./images/popular-categoris/furniture-walls.png"
+                  alt=""
+                />
+                <h3 class="description title-descr">Меблеві стіни</h3>
                 <p class="description amount">24</p></a
               >
             </li>
-            <li>
+            <li class="item-categories">
               <a href=""
-                ><h3 class="description title-descr">Кухні</h3>
+                >
+                <img src="./images/popular-categoris/kitchens.png" alt="">
+                <h3 class="description title-descr">Кухні</h3>
                 <p class="description amount">30</p></a
               >
             </li>
@@ -175,12 +194,19 @@
       <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
       <section class="section popular-products">
         <div class="container">
-          <h2 class="section-title">Найпопулярніші товари</h2>
-          <a href="" class="view-all">Дивитись всі</a>
-          <ul class="list">
-            <li>
+          <div class="title-wrapper">
+            <h2 class="section-title no-margin">Найпопулярніші товари</h2>
+            <a href="" class="view-all">Дивитись всі</a>
+          </div>
+          <ul class="list list-products">
+            <li class="item-products">
               <a href="" class="product-card">
-                <img src="" alt="" />
+                <img
+                  src="./images/popular-products/bed-sparta.jpg"
+                  alt="ліжко-спарта"
+                  width="260"
+                  height="220"
+                />
               </a>
               <p class="size">Розмір: 61 x 184 x 2130 мм</p>
               <a href="">
@@ -192,9 +218,14 @@
               <p class="past-price">25 400 грн.</p>
               <p class="current-price">15 400 грн.</p>
             </li>
-            <li>
+            <li class="item-products">
               <a href="" class="product-card">
-                <img src="" alt="" />
+                <img
+                  src="./images/popular-products/bed-argon.jpg"
+                  alt="ліжко-аргон"
+                  width="260"
+                  height="220"
+                />
               </a>
               <p class="size">Розмір: 61 x 184 x 2130 мм</p>
               <a href="">
@@ -204,9 +235,14 @@
 
               <p class="current-price">16 400 грн.</p>
             </li>
-            <li>
+            <li class="item-products">
               <a href="" class="product-card">
-                <img src="" alt="" />
+                <img
+                  src="./images/popular-products/bed-prestige.jpg"
+                  alt="ліжко-престиж"
+                  width="260"
+                  height="220"
+                />
               </a>
               <p class="size">Розмір: 61 x 184 x 2130 мм</p>
               <a href="">
@@ -216,9 +252,14 @@
 
               <p class="current-price">14 969 грн.</p>
             </li>
-            <li>
+            <li class="item-products">
               <a href="" class="product-card">
-                <img src="" alt="" />
+                <img
+                  src="./images/popular-products/sofa-tokio-2.jpg"
+                  alt="диван токіо-2"
+                  width="260"
+                  height="220"
+                />
               </a>
               <p class="size">Розмір: 61 x 184 x 2130 мм</p>
               <a href="">
@@ -228,9 +269,14 @@
 
               <p class="current-price">13 211 грн.</p>
             </li>
-            <li>
+            <li class="item-products">
               <a href="" class="product-card">
-                <img src="" alt="" />
+                <img
+                  src="./images/popular-products/matrass-largo.jpg"
+                  alt="матрац ларго"
+                  width="260"
+                  height="220"
+                />
               </a>
               <p class="size">Розмір: 61 x 184 x 2130 мм</p>
               <a href="">
@@ -240,9 +286,14 @@
               <p class="past-price">3 122 грн.</p>
               <p class="current-price">2 810 грн.</p>
             </li>
-            <li>
+            <li class="item-products">
               <a href="" class="product-card">
-                <img src="" alt="" />
+                <img
+                  src="./images/popular-products/matrass-argentum.jpg"
+                  alt="матрац аргентум"
+                  width="260"
+                  height="220"
+                />
               </a>
               <p class="size">Розмір: 61 x 184 x 2130 мм</p>
               <a href="">
@@ -254,9 +305,14 @@
               <p class="past-price">5 966 грн.</p>
               <p class="current-price">5 071 грн.</p>
             </li>
-            <li>
+            <li class="item-products">
               <a href="" class="product-card">
-                <img src="" alt="" />
+                <img
+                  src="./images/popular-products/sofa-bravo.jpg"
+                  alt="диван браво"
+                  width="260"
+                  height="220"
+                />
               </a>
               <p class="size">Розмір: 61 x 184 x 2130 мм</p>
               <a href="">
@@ -265,9 +321,14 @@
               <p class="in-stock">В наявності</p>
               <p class="current-price">10 008 грн.</p>
             </li>
-            <li>
+            <li class="item-products">
               <a href="" class="product-card">
-                <img src="" alt="" />
+                <img
+                  src="./images/popular-products/bed-mk-5.jpg"
+                  alt="ліжко мк-5"
+                  width="260"
+                  height="220"
+                />
               </a>
               <p class="size">Розмір: 61 x 184 x 2130 мм</p>
               <a href="">
