--- a/index.html
+++ b/index.html
@@ -344,24 +344,24 @@
       <!-- АКЦІЇ -->
       <section class="section shares">
         <div class="container">
-          <h2 class="section-title title">Акції</h2>
+          <h2 class="section-title title-shares">Акції</h2>
           <a href="" class="view-all">Дивитись всі</a>
-          <ul class="list">
-            <li>
+          <ul class="list list-shares">
+            <li class="item-shares">
               <a href=""
                 ><img
                   src="./images/akciya(літній-розпродаж).jpg"
                   alt="акція-літній розпродаж"
               /></a>
             </li>
-            <li>
+            <li class="item-shares">
               <a href=""
                 ><img
                   src="./images/akciya(диванний-цінопад).jpg"
                   alt="акція-диванний цінопад"
               /></a>
             </li>
-            <li>
+            <li class="item-shares">
               <a href=""
                 ><img
                   src="./images/akciya(королівські-скидки).jpg"
@@ -375,53 +375,63 @@
       <section class="section last-reviews">
         <div class="container">
           <h2 class="section-title">Останні відгуки</h2>
-          <a href=""
+        <div class="logo-rating">
+            <a href=""
             ><img
               src="./images/лого(останні-відгуки).svg"
               alt="логотип"
               width="80"
-              height="80"
+              height="80" class="logo-footer"
           /></a>
-          <h3 class="title-rating">Магазин меблів для дому «KROVATO»</h3>
+        <div class="wrapper-rating">
+            <h3 class="title-rating">Магазин меблів для дому «KROVATO»</h3>
           <p class="rating">5.0</p>
           <p class="count-rating">Базовано на відгуках: 269</p>
+        </div>
+        </div>
           <button type="button" class="button write-review">
             Написати відгук
           </button>
           <a href="" class="all-reviews">Всі відгуки</a>
-          <ul class="list">
-            <li>
-              <p class="reviews-name">Іван Стедниця</p>
-              <p class="reviews-descr">
+          <ul class="list list-reviews">
+            <li class="item-reviews">
+              <div class="name-date">
+                <p class="name-reviews">Іван Стедниця</p>
+              <p class="date-reviews">25.01.2022</p>
+              </div>
+              <p class="descr-reviews">
                 Хочу відзначити злагоджену та чітку роботу всіх співробітників,
                 з ким довелося контактувати при виборі та купівлі дивану
                 Orange-Line Родео SF17-LX6-PLNGR. Велику допомогу при виборі
                 надала спеціаліст з продажу Уляна ...
               </p>
-              <a href="" class="reviews-link">Диван Orange-Line Родео SF ...</a>
-              <p class="reviews-date">25.01.2022</p>
+              <a href="" class="link-reviews">Диван Orange-Line Родео SF ...</a>
             </li>
-            <li>
-              <p class="reviews-name">Іван Стедниця</p>
-              <p class="reviews-descr">
+            <li class="item-reviews">
+           <div class="name-date">
+               <p class="name-reviews">Іван Стедниця</p>
+              <p class="date-reviews">25.01.2022</p>
+           </div>
+              <p class="descr-reviews">
                 Хочу відзначити злагоджену та чітку роботу всіх співробітників,
                 з ким довелося контактувати при виборі та купівлі дивану
                 Orange-Line Родео SF17-LX6-PLNGR. Велику допомогу при виборі
                 надала спеціаліст з продажу Уляна ...
               </p>
-              <a href="" class="reviews-link">Диван Orange-Line Родео SF ...</a>
-              <p class="reviews-date">25.01.2022</p>
+              <a href="" class="link-reviews">Диван Orange-Line Родео SF ...</a>
             </li>
-            <li>
-              <p class="reviews-name">Іван Стедниця</p>
-              <p class="reviews-descr">
+            <li class="item-reviews">
+              <div class="name-date">
+                <p class="name-reviews">Іван Стедниця</p>
+              <p class="date-reviews">25.01.2022</p>
+              </div>
+              <p class="descr-reviews">
                 Хочу відзначити злагоджену та чітку роботу всіх співробітників,
                 з ким довелося контактувати при виборі та купівлі дивану
                 Orange-Line Родео SF17-LX6-PLNGR. Велику допомогу при виборі
                 надала спеціаліст з продажу Уляна ...
               </p>
-              <a href="" class="reviews-link">Диван Orange-Line Родео SF ...</a>
-              <p class="reviews-date">25.01.2022</p>
+              <a href="" class="link-reviews">Диван Orange-Line Родео SF ...</a>
             </li>
           </ul>
         </div>
