add flex margin and other for 'articles', 'about', ,benefits'

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
               src="./images/лого(останні-відгуки).svg"
               alt="логотип"
               width="80"
-              height="80" class="logo-footer"
+              height="80" class="logo-reviews"
           /></a>
         <div class="wrapper-rating">
             <h3 class="title-rating">Магазин меблів для дому «KROVATO»</h3>
@@ -439,44 +439,52 @@
       <!-- СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ  -->
       <section class="section articles-news">
         <div class="container">
-          <h2 class="section-title">Свіжі статті та останні новини</h2>
+        <div class="title-wrapper">
+            <h2 class="section-title no-margin">Свіжі статті та останні новини</h2>
           <a href="" class="read-blog">Читати блог</a>
-          <ul class="list">
-            <li>
+        </div>
+          <ul class="list list-articles">
+            <li class="item-articles">
               <img
                 src="./images/chairs-living-room.jpg"
                 alt="стільці для вітальні"
                 width="410"
-                height="270"
+                height="270" class="img-articles"
               />
-              <p class="news-title">
-                Стільці для вітальні. Як правильно вибрати?
+             <div class="title-detail">
+               <p class="news-title">
+                Стільці для вітальні. Як більш правильно вибрати?
               </p>
               <a href="" class="link-detail">Детальніше</a>
+             </div>
             </li>
-            <li>
+            <li class="item-articles">
               <img
                 src="./images/kitchen.jpg"
                 alt="стільці і кухонний куточок"
                 width="410"
-                height="270"
+                height="270" class="img-articles"
               />
-              <p class="news-title">
+           <div class="title-detail">
+               <p class="news-title">
                 Що краще вибрати для кухні – стільці чи кухонний куточок?
               </p>
               <a href="" class="link-detail">Детальніше</a>
+           </div>
             </li>
-            <li>
+            <li class="item-articles">
               <img
                 src="./images/furniture-living-room.jpg"
                 alt="меблі для вітальні"
                 width="410"
-                height="270"
+                height="270" class="img-articles"
               />
-              <p class="news-title">
+             <div class="title-detail">
+               <p class="news-title">
                 Оформлення вітальні. Які м'які меблі краще вибрати?
               </p>
               <a href="" class="link-detail">Детальніше</a>
+             </div>
             </li>
           </ul>
         </div>
@@ -485,45 +493,33 @@
       <section class="section about no-margin">
         <div class="container">
           <h2 class="visually-hidden">Про</h2>
-          <p class="after-title">
+       <div class="wrapper-description">
+           <p class="after-title">
             KROVATO - коли потрібні якісні меблі за доступною ціною!
           </p>
           <p class="about-text">
-            Якщо в пошуковий рядок браузера ввести запит: «Куплю ліжко, шафу,
-            диван», система видасть сотні продавців, що спеціалізуються з
-            продажу цього товару. Але далеко не всі магазини та сайти в
-            інтернеті можуть запропонувати такий самий різноманітний асортимент,
-            як наша компанія. Та й з нашими цінами конкурувати можуть мало хто.
-            Адже товар ми отримуємо безпосередньо від виробників, не
-            переплачуючи за послуги посередників. До того ж, продажі ми ведемо
-            як онлайн, так і в салоні, при цьому ціна на асортимент онлайн та
-            офлайн - однакова. Ми співпрацюємо тільки з найкращими вітчизняними
-            та зарубіжними фабриками та компаніями, які отримали визнання
-            покупців та експертів меблевої справи. Для нас важливо, щоб товар,
-            який ми продаємо, відповідав міжнародним стандартам якості, був із
-            сертифікованих матеріалів – довговічних, красивих та екологічно
-            чистих. Ми з особливою ретельністю відбираємо пропозиції для
-            магазину, тому можемо поручитися за їхню якість і впевнено
-            рекомендувати клієнтам. У нас ви легко знайдете меблеві серії в
-            класичному та модерному стилі, лінійки для оформлення житла в дусі
-            романтики або скандинавського лаконізму. ..
+          Якщо в пошуковий рядок браузера ввести запит: «Куплю ліжко, шафу, диван», система видасть сотні продавців, що спеціалізуються з продажу цього товару. Але далеко не всі магазини та сайти в інтернеті можуть запропонувати такий самий різноманітний асортимент, як наша компанія. Та й з нашими цінами конкурувати можуть мало хто. Адже товар ми отримуємо безпосередньо від виробників, не переплачуючи за послуги посередників. До того ж, продажі ми ведемо як онлайн, так і в салоні, при цьому ціна на асортимент онлайн та офлайн - однакова.
+                   <br/>
+           Ми співпрацюємо тільки з найкращими вітчизняними та зарубіжними фабриками та компаніями, які отримали визнання покупців та експертів меблевої справи. Для нас важливо, щоб товар, який ми продаємо, відповідав міжнародним стандартам якості, був із сертифікованих матеріалів – довговічних, красивих та екологічно чистих. Ми з особливою ретельністю відбираємо пропозиції для магазину, тому можемо поручитися за їхню якість і впевнено рекомендувати клієнтам. У нас ви легко знайдете меблеві серії в класичному та модерному стилі, лінійки для оформлення житла в дусі романтики або скандинавського лаконізму.
+..
           </p>
+       </div>
           <section class="benefits">
             <h2 class="visually-hidden">Переваги</h2>
-            <ul class="list">
-              <li>
+            <ul class="list list-benefits">
+              <li class="item-benefits">
                 <img src="" alt="" />
                 <p class="benefits-text">Безкоштовна доставка</p>
               </li>
-              <li>
+              <li class="item-benefits">
                 <img src="" alt="" />
                 <p class="benefits-text">Безкоштовна збірка</p>
               </li>
-              <li>
+              <li class="item-benefits">
                 <img src="" alt="" />
                 <p class="benefits-text">Післягарантійне обслуговування</p>
               </li>
-              <li>
+              <li class="item-benefits">
                 <img src="" alt="" />
                 <p class="benefits-text">Знижки клієнтам</p>
               </li>
@@ -535,12 +531,16 @@
     <!-- ФУТЕР -->
     <footer class="footer">
       <div class="container">
-        <a href="/index.html">
-          <img src="./images/logo-footer.svg" alt="логотип" />
+  <div class="wrapper-footer">
+     <div class="wrapper-item">
+         <a href="/index.html" class="link-logo">
+          <img src="./images/logo-footer.svg" alt="логотип"/>
         </a>
         <p class="footer-text">Приєднуйтесь</p>
         <p class="footer-text">Допомога і консультація:</p>
-        <p class="footer-title">Інформація</p>
+   </div>
+      <div class="wrapper-item">
+          <p class="footer-title">Інформація</p>
         <ul class="list">
           <li><a href="" class="footer-link">Про нас</a></li>
           <li><a href="" class="footer-link">Оплата</a></li>
@@ -550,7 +550,9 @@
           <li><a href="" class="footer-link">Контакти</a></li>
           <li><a href="" class="footer-link">Мапа сайту</a></li>
         </ul>
-        <p class="footer-title">Категорії</p>
+      </div>
+     <div class="wrapper-item">
+         <p class="footer-title">Категорії</p>
         <ul class="list">
           <li><a href="" class="footer-link">Ліжка</a></li>
           <li><a href="" class="footer-link">Матраци</a></li>
@@ -563,7 +565,9 @@
           <li><a href="" class="footer-link">Меблеві стіни</a></li>
           <li><a href="" class="footer-link">Кухні</a></li>
         </ul>
-        <p class="footer-title">Клієнтам</p>
+     </div>
+        <div class="wrapper-item">
+          <p class="footer-title">Клієнтам</p>
         <ul class="list">
           <li><a href="" class="footer-link">Акції</a></li>
           <li><a href="" class="footer-link">Розпродаж</a></li>
@@ -573,7 +577,9 @@
           <li><a href="" class="footer-link">Умови покупки</a></li>
           <li><a href="" class="footer-link">Політика конфіденційності</a></li>
         </ul>
-        <address>
+        </div>
+     <div class="wrapper-item">
+         <address>
           <a href="tel:+380679294545" class="connection footer-connection"
             >+38 067 929-45-45
           </a>
@@ -594,6 +600,8 @@
         <p class="connection footer-connection">
           Працюємо щодня з 9:00 до 18:00
         </p>
+     </div>
+  </div>
         <p class="copyright">
           &#169; KROVATO - Технології сну - 2022. Всі права захищені.
         </p>
