add styles for footer

--- a/index.html
+++ b/index.html
@@ -110,82 +110,91 @@
           <ul class="list list-categories">
             <li class="item-categories">
               <a href="">
+                  <h3 class="description title-descr">Ліжка</h3>
+                <p class="description amount">54</p>
                 <img src="./images/popular-categoris/beds.png" alt="ліжка" />
-                <h3 class="description title-descr">Ліжка</h3>
-                <p class="description amount">54</p></a
+                              </a
               >
             </li>
             <li class="item-categories">
               <a href="">
+                  <h3 class="description title-descr">Матраци</h3>
+                <p class="description amount">30</p>
                 <img
                   src="./images/popular-categoris/matresses.png"
                   alt="матраци"
                 />
-                <h3 class="description title-descr">Матраци</h3>
-                <p class="description amount">30</p></a
+                              </a
               >
             </li>
             <li class="item-categories">
               <a href="">
+                   <h3 class="description title-descr">М'які меблі</h3>
+                <p class="description amount">196</p>
                 <img
                   src="./images/popular-categoris/soft-furniture.png"
                   alt="м'які меблі"
                 />
-                <h3 class="description title-descr">М'які меблі</h3>
-                <p class="description amount">196</p></a
+                  </a
               >
             </li>
             <li class="item-categories">
               <a href="">
+                 <h3 class="description title-descr">Шафи</h3>
+                <p class="description amount">79</p>
                 <img src="./images/popular-categoris/wardrodes.png" alt="" />
-                <h3 class="description title-descr">Шафи</h3>
-                <p class="description amount">79</p></a
+               </a
               >
             </li>
             <li class="item-categories">
               <a href="">
+                 <h3 class="description title-descr">Комоди</h3>
+                <p class="description amount">54</p>
                 <img src="./images/popular-categoris/comodes.png" alt="" />
-                <h3 class="description title-descr">Комоди</h3>
-                <p class="description amount">54</p></a
+                               </a
               >
             </li>
             <li class="item-categories">
               <a href="">
+                 <h3 class="description title-descr">Тумби</h3>
+                <p class="description amount">64</p>
                 <img src="./images/popular-categoris/thumbs.png" alt="" />
-                <h3 class="description title-descr">Тумби</h3>
-                <p class="description amount">64</p></a
+                               </a
               >
             </li>
             <li class="item-categories">
               <a href="">
+                     <h3 class="description title-descr">Столи</h3>
+                <p class="description amount">35</p>
                 <img src="./images/popular-categoris/tables.png" alt="" />
-                <h3 class="description title-descr">Столи</h3>
-                <p class="description amount">35</p></a
+                           </a
               >
             </li>
             <li class="item-categories">
               <a href="">
+                      <h3 class="description title-descr">Стільці</h3>
+                <p class="description amount">89</p>
                 <img src="./images/popular-categoris/chairs.png" alt="" />
-                <h3 class="description title-descr">Стільці</h3>
-                <p class="description amount">89</p></a
+                          </a
               >
             </li>
             <li class="item-categories">
               <a href=""></a>
+                     <h3 class="description title-descr">Меблеві стіни</h3>
+                <p class="description amount">24</p>
                 <img
                   src="./images/popular-categoris/furniture-walls.png"
                   alt=""
                 />
-                <h3 class="description title-descr">Меблеві стіни</h3>
-                <p class="description amount">24</p></a
+                         </a
               >
             </li>
             <li class="item-categories">
-              <a href=""
-                >
+              <a href="">
+                   <h3 class="description title-descr">Кухні</h3>
+                <p class="description amount">30</p>
                 <img src="./images/popular-categoris/kitchens.png" alt="">
-                <h3 class="description title-descr">Кухні</h3>
-                <p class="description amount">30</p></a
+                             </a
               >
             </li>
           </ul>
@@ -542,61 +551,61 @@
       <div class="wrapper-item">
           <p class="footer-title">Інформація</p>
         <ul class="list">
-          <li><a href="" class="footer-link">Про нас</a></li>
-          <li><a href="" class="footer-link">Оплата</a></li>
-          <li><a href="" class="footer-link">Доставка та збірка</a></li>
-          <li><a href="" class="footer-link">Відгуки</a></li>
-          <li><a href="" class="footer-link">Блог</a></li>
-          <li><a href="" class="footer-link">Контакти</a></li>
-          <li><a href="" class="footer-link">Мапа сайту</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Про нас</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Оплата</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Доставка та збірка</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Відгуки</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Блог</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Контакти</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Мапа сайту</a></li>
         </ul>
       </div>
      <div class="wrapper-item">
          <p class="footer-title">Категорії</p>
         <ul class="list">
-          <li><a href="" class="footer-link">Ліжка</a></li>
-          <li><a href="" class="footer-link">Матраци</a></li>
-          <li><a href="" class="footer-link">М’які меблі</a></li>
-          <li><a href="" class="footer-link">Шафи</a></li>
-          <li><a href="" class="footer-link">Комоди</a></li>
-          <li><a href="" class="footer-link">Тумби</a></li>
-          <li><a href="" class="footer-link">Столи</a></li>
-          <li><a href="" class="footer-link">Стільці</a></li>
-          <li><a href="" class="footer-link">Меблеві стіни</a></li>
-          <li><a href="" class="footer-link">Кухні</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Ліжка</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Матраци</a></li>
+          <li class="item-footer"><a href="" class="footer-link">М’які меблі</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Шафи</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Комоди</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Тумби</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Столи</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Стільці</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Меблеві стіни</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Кухні</a></li>
         </ul>
      </div>
         <div class="wrapper-item">
           <p class="footer-title">Клієнтам</p>
         <ul class="list">
-          <li><a href="" class="footer-link">Акції</a></li>
-          <li><a href="" class="footer-link">Розпродаж</a></li>
-          <li><a href="" class="footer-link">Купити в кредит</a></li>
-          <li><a href="" class="footer-link">Обмін і повернення товару</a></li>
-          <li><a href="" class="footer-link">Часто задавані питання</a></li>
-          <li><a href="" class="footer-link">Умови покупки</a></li>
-          <li><a href="" class="footer-link">Політика конфіденційності</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Акції</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Розпродаж</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Купити в кредит</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Обмін і повернення товару</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Часто задавані питання</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Умови покупки</a></li>
+          <li class="item-footer"><a href="" class="footer-link">Політика конфіденційності</a></li>
         </ul>
         </div>
      <div class="wrapper-item">
-         <address>
-          <a href="tel:+380679294545" class="connection footer-connection"
+         <address class="address">
+          <a href="tel:+380679294545" class="connection footer-connection phone"
             >+38 067 929-45-45
           </a>
-          <a href="tel:+380501334545" class="connection footer-connection">
+          <a href="tel:+380501334545" class="connection footer-connection phone">
             +38 050 133-45-45
           </a>
-          <a href="tel:+380931707545" class="connection footer-connection">
+          <a href="tel:+380931707545" class="connection footer-connection phone">
             +38 093 170-75-45</a
           >
           <p class="connection footer-call">Передзвоніть мені</p>
-          <!-- КАРТА -->
-          <a
-            href="https://maps.app.goo.gl/33giWuNh9TgoFYhb8"
-            class="connection footer-connection"
-            >м. Київ, провулок Ізяславський 52, поверх 2</a
-          >
         </address>
+        <!-- КАРТА -->
+                  <a
+            href="https://maps.app.goo.gl/33giWuNh9TgoFYhb8"
+            class="connection footer-connection map"
+            >м. Київ, провулок Ізяславський 52,  поверх 2</a
+          >
         <p class="connection footer-connection">
           Працюємо щодня з 9:00 до 18:00
         </p>
