--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
           <h2 class="section-title">Популярні категорії</h2>
           <ul class="list list-categories">
             <li class="item-categories">
-              <a href="">
-                  <h3 class="description title-descr">Ліжка</h3>
+                     <h3 class="description title-descr">Ліжка</h3>
                 <p class="description amount">54</p>
-                <img src="./images/popular-categoris/beds.png" alt="ліжка" />
+              <a href="">
+                           <img src="./images/popular-categoris/beds.png" alt="ліжка" class="img-categories"/>
                               </a
               >
             </li>
@@ -122,7 +122,7 @@
                 <p class="description amount">30</p>
                 <img
                   src="./images/popular-categoris/matresses.png"
-                  alt="матраци"
+                  alt="матраци" class="img-categories"
                 />
                               </a
               >
@@ -133,7 +133,7 @@
                 <p class="description amount">196</p>
                 <img
                   src="./images/popular-categoris/soft-furniture.png"
-                  alt="м'які меблі"
+                  alt="м'які меблі" class="img-categories"
                 />
                   </a
               >
@@ -142,7 +142,7 @@
               <a href="">
                  <h3 class="description title-descr">Шафи</h3>
                 <p class="description amount">79</p>
-                <img src="./images/popular-categoris/wardrodes.png" alt="" />
+                <img src="./images/popular-categoris/wardrodes.png" alt="" class="img-categories" />
                </a
               >
             </li>
@@ -150,7 +150,7 @@
               <a href="">
                  <h3 class="description title-descr">Комоди</h3>
                 <p class="description amount">54</p>
-                <img src="./images/popular-categoris/comodes.png" alt="" />
+                <img src="./images/popular-categoris/comodes.png" alt="" class="img-categories" />
                                </a
               >
             </li>
@@ -158,7 +158,7 @@
               <a href="">
                  <h3 class="description title-descr">Тумби</h3>
                 <p class="description amount">64</p>
-                <img src="./images/popular-categoris/thumbs.png" alt="" />
+                <img src="./images/popular-categoris/thumbs.png" alt="" class="img-categories"/>
                                </a
               >
             </li>
@@ -166,7 +166,7 @@
               <a href="">
                      <h3 class="description title-descr">Столи</h3>
                 <p class="description amount">35</p>
-                <img src="./images/popular-categoris/tables.png" alt="" />
+                <img src="./images/popular-categoris/tables.png" alt="" class="img-categories"/>
                            </a
               >
             </li>
@@ -174,7 +174,7 @@
               <a href="">
                       <h3 class="description title-descr">Стільці</h3>
                 <p class="description amount">89</p>
-                <img src="./images/popular-categoris/chairs.png" alt="" />
+                <img src="./images/popular-categoris/chairs.png" alt="" class="img-categories"/>
                           </a
               >
             </li>
@@ -184,7 +184,7 @@
                 <p class="description amount">24</p>
                 <img
                   src="./images/popular-categoris/furniture-walls.png"
-                  alt=""
+                  alt="" class="img-categories"
                 />
                          </a
               >
@@ -193,7 +193,7 @@
               <a href="">
                    <h3 class="description title-descr">Кухні</h3>
                 <p class="description amount">30</p>
-                <img src="./images/popular-categoris/kitchens.png" alt="">
+                <img src="./images/popular-categoris/kitchens.png" alt="" class="img-categories"/>
                              </a
               >
             </li>
