add folders for sections

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="header-bg">
           <a href="./index.html">
             <img
-              src="./images/logo-header.svg"
+              src="./images/header/logo-header.svg"
               alt="логотип"
               width="250"
               height="50"
@@ -96,7 +96,7 @@
         <div class="container">
           <h1 class="visually-hidden">Ліжко хюпер</h1>
           <img
-            src="./images/slider-shares.jpg"
+            src="./images/slider/slider-shares.jpg"
             alt="слайдер"
             width="1290"
             height="420"
@@ -359,21 +359,21 @@
             <li class="item-shares">
               <a href=""
                 ><img
-                  src="./images/akciya(літній-розпродаж).jpg"
+                  src="./images/shares/akciya(літній-розпродаж).jpg"
                   alt="акція-літній розпродаж"
               /></a>
             </li>
             <li class="item-shares">
               <a href=""
                 ><img
-                  src="./images/akciya(диванний-цінопад).jpg"
+                  src="./images/shares/akciya(диванний-цінопад).jpg"
                   alt="акція-диванний цінопад"
               /></a>
             </li>
             <li class="item-shares">
               <a href=""
                 ><img
-                  src="./images/akciya(королівські-скидки).jpg"
+                  src="./images/shares/akciya(королівські-скидки).jpg"
                   alt="акція-королівські скидки"
               /></a>
             </li>
@@ -387,7 +387,7 @@
         <div class="logo-rating">
             <a href=""
             ><img
-              src="./images/лого(останні-відгуки).svg"
+              src="./images/last-reviews/лого(останні-відгуки).svg"
               alt="логотип"
               width="80"
               height="80" class="logo-reviews"
@@ -455,7 +455,7 @@
           <ul class="list list-articles">
             <li class="item-articles">
               <img
-                src="./images/chairs-living-room.jpg"
+                src="./images/articles-news/chairs-living-room.jpg"
                 alt="стільці для вітальні"
                 width="410"
                 height="270" class="img-articles"
@@ -469,7 +469,7 @@
             </li>
             <li class="item-articles">
               <img
-                src="./images/kitchen.jpg"
+                src="./images/articles-news/kitchen.jpg"
                 alt="стільці і кухонний куточок"
                 width="410"
                 height="270" class="img-articles"
@@ -483,7 +483,7 @@
             </li>
             <li class="item-articles">
               <img
-                src="./images/furniture-living-room.jpg"
+                src="./images/articles-news/furniture-living-room.jpg"
                 alt="меблі для вітальні"
                 width="410"
                 height="270" class="img-articles"
@@ -543,7 +543,7 @@
   <div class="wrapper-footer">
      <div class="wrapper-item">
          <a href="/index.html" class="link-logo">
-          <img src="./images/logo-footer.svg" alt="логотип"/>
+          <img src="./images/footer/logo-footer.svg" alt="логотип"/>
         </a>
         <p class="footer-text">Приєднуйтесь</p>
         <p class="footer-text">Допомога і консультація:</p>
