--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
         </ul>
         <p class="help-consul">Допомога і консультація:</p>
         <ul class="list">
-          <li><a href=""></a></li>
+          <li><a href="">
+            <svg>
+              <use href="./images/symbol-defs.svg#watsapp"></use>
+            </svg>
+          </a></li>
           <li><a href=""></a></li>
           <li><a href=""></a></li>
         </ul>
