--- a/index.html
+++ b/index.html
@@ -21,26 +21,37 @@
     <!-- ХЕДЕР -->
     <header class="header">
       <nav class="container">
-        <ul class="list list-about">
+      <div class="about-help">
+          <ul class="list list-about">
           <li class="item-about"><a href="" class="link-about">Про нас</a></li>
           <li class="item-about"><a href="" class="link-about">Оплата</a></li>
-          <li class="item-about">
-            <a href="" class="link-about">Доставка та збірка</a>
+          <li class="item-about"> <a href="" class="link-about">Доставка та збірка</a>
           </li>
           <li class="item-about"><a href="" class="link-about">Відгуки</a></li>
           <li class="item-about"><a href="" class="link-about">Блог</a></li>
           <li class="item-about"><a href="" class="link-about">Контакти</a></li>
         </ul>
-        <p class="help-consul">Допомога і консультація:</p>
-        <ul class="list">
-          <li><a href="">
-            <svg>
-              <use href="./images/symbol-defs.svg#watsapp"></use>
+       <div class="wrapper-help">
+         <p class="help-consul">Допомога і консультація:</p>
+        <ul class="list list-help">
+          <li class="item-help"><a href="" aria-label="Посилання на вацап" target="_blank" rel="noopener noreferrer nofollow">
+            <svg class="icon-help">
+              <use href="./images/sprite.svg#watsapp"></use>
             </svg>
           </a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+          <li class="item-help"><a href="" aria-label="Посилання на телеграм" target="_blank" rel="noopener nofollow noreferrer">
+             <svg class="icon-help">
+              <use href="./images/sprite.svg#telegram"></use>
+            </svg>
+          </a></li>
+          <li class="item-help"><a href="" aria-label="Посилання на вайбер" target="_blank" rel="noopener nofollow noreferrer ">
+             <svg class="icon-help">
+              <use href="./images/sprite.svg#viber"></use>
+            </svg>
+          </a></li>
         </ul>
+       </div>
+      </div>
         <!-- ДАЛІ БУДЕ ФОРМА- ЯК ДОЙДУ ДО ФОРМ - ТОДІ ЗРОБЛЮ -->
         <div class="header-bg">
           <a href="./index.html">
@@ -53,8 +64,10 @@
           </a>
           <button type="button" class="button catalog">Каталог</button>
           <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
-          <p class="work-hours">Щодня з 9:00 до 18:00</p>
+<div class="hours-tel">
+            <p class="work-hours">Щодня з 9:00 до 18:00</p>
           <a href="tel:0679294545" class="header-tel">067 929-45-45</a>
+</div>
           <div class="list-wrapper">
             <ul class="icons-list list">
               <li class="icons-item">
