add svg icon for html and styles

--- a/index.html
+++ b/index.html
@@ -62,12 +62,30 @@
               height="50"
             />
           </a>
-          <button type="button" class="button catalog">Каталог</button>
+          <button type="button" class="button catalog">
+            <svg class="icon-catalog" width="24" height="24">
+              <use href="./images/sprite.svg#catalog-menu"></use>
+            </svg>
+            Каталог</button>
           <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
-<div class="hours-tel">
+<div class="wrapper-hourstel">
+  <svg class="icon-telephone" width="50" height="50">
+    <use href="./images/sprite.svg#telephone"></use>
+  </svg>
+  <div class="hours-tel">
             <p class="work-hours">Щодня з 9:00 до 18:00</p>
           <a href="tel:0679294545" class="header-tel">067 929-45-45</a>
 </div>
+<svg width="24" height="24">
+  <use href="./images/sprite.svg#arrow-down"></use>
+</svg>
+</div>
+<svg class="icon-obrane" width="50" height="50">
+  <use href="./images/sprite.svg#obrane-header"></use>
+</svg>
+<svg width="50" height="50">
+  <use href="./images/sprite.svg#korzina-heder"></use>
+</svg>
           <div class="list-wrapper">
             <ul class="icons-list list">
               <li class="icons-item">
