add other icons for header

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               </svg>
             </button>
             <button type="button" class="obrane-korzina">
-              <svg width="50" height="50">
+              <svg class="korzina-header" width="50" height="50">
                 <use href="./images/sprite.svg#korzina-heder"></use>
               </svg>
             </button>
